--- a/QuanLyGiaiCauLong/appsettings.json
+++ b/QuanLyGiaiCauLong/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "BadmintonDb": "Server=(localdb)\\mssqllocaldb;Database=QuanLyCauLong;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
